# echostash-ui-automation

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: regression.yml  sanity.yml
config/: local.env  prod.env  stage.env
pages/: __init__.py  admin_utm_page.py  analytics_page.py  api_keys_page.py  auth_page.py  base_page.py  browse_detail_page.py  browse_page.py  components.py  context_store_page.py  dashboard_page.py  eval_datasets_page.py  eval_runs_page.py  eval_suites_page.py  evals_page.py  mobile_nav.py  monaco_editor.py  plans_page.py  project_modal.py  project_view_page.py  prompt_builder_page.py  share_page.py  sidebar.py  usage_page.py
tests/: __init__.py  conftest.py
tests/regression/: __init__.py  test_admin.py  test_ai_tools.py  test_analytics_regression.py  test_api_keys_regression.py  test_auth_regression.py  test_browse_regression.py  test_context_store_regression.py  test_dashboard_regression.py  test_edge_cases.py  test_error_states_regression.py  test_evals.py  test_navigation_regression.py  test_packs.py  test_plans_regression.py  test_playground.py  test_project_regression.py  test_prompt_builder_regression.py  test_public_prompt_view.py  test_responsive.py  test_share_regression.py  test_version_control_regression.py
tests/sanity/: __init__.py  test_analytics.py  test_api_keys.py  test_auth.py  test_browse.py  test_context_store.py  test_dashboard.py  test_error_states.py  test_landing.py  test_navigation.py  test_pages_load.py  test_plans_usage.py  test_share.py  (+6 more)
utils/: __init__.py  helpers.py
(+50 files in other folders)
