[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echostash-ui-automation"
version = "0.1.0"
description = "Echostash UI automation tests with Playwright"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "sanity: Quick smoke tests for CI",
    "regression: Full regression suite",
    "mobile: Mobile viewport tests",
    "admin: Admin panel tests",
    "eval: Evaluation feature tests",
]
addopts = "--strict-markers"
